--- a/menu.html
+++ b/menu.html
@@ -169,7 +169,16 @@
             <p class="text-bottom">Costela de boi, mandioca, alho, cebola, tomate, cheiro-verde, louro, pimenta, óleo e sal. Acompanha uma porção de arroz branco.</p>
             <button class="add-to-cart"><i class="fa-solid fa-cart-shopping"></i></button>
         </div>
+
+        <section>
+        <div class="proxima">
+            <a href="menusobremesa.html">PRÓXIMA</a>
+            </div>
+            </section>
+            
     </div>
+
+    
     <script src="menu.js"></script>
 </body>
 </html>
