--- a/menu.html
+++ b/menu.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div class="menu">
+    <div id="menu" class="menu">
         <h1>CARDÁPIO</h1>
         <div class="menu-item">
-            <img src="arroz com pequi.jpeg">
+            <img src="img/arroz com pequi.jpeg">
             <h2>ARROZ COM PEQUI</h2>
                 <li>
-                    R$ 18,00
+                    R$ 18,00....
                 </li>
             <p class="text-bottom">Arroz branco, pequi, linguiça, alho, cebola, óleo e sal.</p>
             <button class="add-to-cart"><i class="fa-solid fa-cart-shopping"></i></button>
         </div>
 
         <div class="menu-item">
-            <img src="bife à cavalo.jpeg">
+            <img src="img/bife à cavalo.jpeg">
             <h2>BIFE À CAVALO</h2>
             <li>
                 R$ 22,00
@@ -31,7 +31,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="costelinha de porcp com ora-pro-nobis.jpeg">
+            <img src="img/costelinha de porcp com ora-pro-nobis.jpeg">
             <h2>COSTELINHA DE PORCO COM ORA-PRO-NÓBIS</h2>
             <li>
                 R$ 24,00
@@ -41,7 +41,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="dobradinha.jpeg">
+            <img src="img/dobradinha.jpeg">
             <h2>DOBRADINHA</h2>
             <li>
                 R$ 20,00
@@ -51,7 +51,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="feijoada.jpeg">
+            <img src="img/feijoada.jpeg">
             <h2>FEIJOADA</h2>
             <li>
                 R$ 25,00
@@ -61,7 +61,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="Frango ao molho pardo.jpeg">
+            <img src="img/Frango ao molho pardo.jpeg">
             <h2>FRANGO AO MOLHO PARDO</h2>
             <li>
                 R$ 23,00
@@ -71,7 +71,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="frango com quiabo (2).jpeg">
+            <img src="img/frango com quiabo (2).jpeg">
             <h2>FRANGO COM QUIABO</h2>
             <li>
                 R$ 20,00
@@ -81,7 +81,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="galinhada (2).jpeg">
+            <img src="img/galinhada (2).jpeg">
             <h2>GALINHADA</h2>
             <li>
                 R$ 19,00
@@ -91,7 +91,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="Kaol.jpeg">
+            <img src="img/Kaol.jpeg">
             <h2>KAOL</h2>
             <li>
                 R$ 17,00
@@ -101,7 +101,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="macarrão na chapa.jpeg">
+            <img src="img/macarrão na chapa.jpeg">
             <h2>MACARRÃO NA CHAPA</h2>
             <li>
                 R$ 22,00
@@ -111,7 +111,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="prato feito.jpeg">
+            <img src="img/prato feito.jpeg">
             <h2>PRATO FEITO</h2>
             <li>
                 R$ 18,00
@@ -121,7 +121,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="rabada.jpeg">
+            <img src="img/rabada.jpeg">
             <h2>RABADA</h2>
             <li>
                 R$ 24,00
@@ -131,7 +131,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="strogonoff.jpeg">
+            <img src="img/strogonoff.jpeg">
             <h2>STROGONOFF</h2>
             <li>
                 R$ 21,00
@@ -141,7 +141,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="tropeiro.jpeg">
+            <img src="img/tropeiro.jpeg">
             <h2>TROPEIRO</h2>
             <li>
                 R$ 22,00
@@ -151,7 +151,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="tutu.jpeg">
+            <img src="img/tutu.jpeg">
             <h2>TUTU</h2>
             <li>
                 R$ 19,00
@@ -161,7 +161,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="vaca atolada.jpeg">
+            <img src="img/vaca atolada.jpeg">
             <h2>VACA ATOLADA</h2>
             <li>
                 R$ 23,00
