--- a/menu.html
+++ b/menu.html
@@ -11,9 +11,24 @@
     <div class="menu">
         <h1>CARDÁPIO</h1>
 
+       <Section>
+        <div class="sobremesa">
+            <a href="menusobremesa.html">SOBREMESA</a>
+            </div>
+       </Section>
+<div>
+
+</div> 
+        <section>
+        <div class="bebida">
+            <a href="menubebida.html">BEBIDA</a>
+            </div>
+        </Section>
+
+
         <section>
         <div class="menu-item">
-            <img src="arroz com pequi.jpeg">
+            <img src="arrozcompequi.jpeg">
             <h2>ARROZ COM PEQUI</h2>
                 <li>
                     R$ 18,00
@@ -23,7 +38,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="bife à cavalo.jpeg">
+            <img src="bifeàcavalo.jpeg">
             <h2>BIFE À CAVALO</h2>
             <li>
                 R$ 22,00
@@ -36,7 +51,7 @@
 
         <section>
             <div class="menu-item">
-            <img src="costelinha de porcp com ora-pro-nobis.jpeg">
+            <img src="costelinhadeporcocomora-pro-nobis.jpeg">
             <h2>COSTELINHA DE PORCO COM ORA-PRO-NÓBIS</h2>
             <li>
                 R$ 24,00
@@ -70,7 +85,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="Frango ao molho pardo.jpeg">
+            <img src="Frangoaomolhopardo.jpeg">
             <h2>FRANGO AO MOLHO PARDO</h2>
             <li>
                 R$ 23,00
@@ -83,7 +98,7 @@
 
     <section>
         <div class="menu-item">
-            <img src="frango com quiabo (2).jpeg">
+            <img src="frangocomquiabo(2).jpeg">
             <h2>FRANGO COM QUIABO</h2>
             <li>
                 R$ 20,00
@@ -115,7 +130,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="macarrão na chapa.jpeg">
+            <img src="macarrãonachapa.jpeg">
             <h2>MACARRÃO NA CHAPA</h2>
             <li>
                 R$ 22,00
@@ -128,7 +143,7 @@
 
     <section>
         <div class="menu-item">
-            <img src="prato feito.jpeg">
+            <img src="pratofeito.jpeg">
             <h2>PRATO FEITO</h2>
             <li>
                 R$ 18,00
@@ -183,7 +198,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="vaca atolada.jpeg">
+            <img src="vacaatolada.jpeg">
             <h2>VACA ATOLADA</h2>
             <li>
                 R$ 23,00
@@ -192,32 +207,13 @@
             <button class="add-to-cart"><i class="fa-solid fa-cart-shopping"></i></button>
         </div>
     </section>
-
-        <section>
-            <div>
-                
-            </div>
-        <div class="proxima">
-            <a href="menusobremesa.html">PRÓXIMA</a>
-            </div>
-            </section>
             
     </div>
-
-    <div id="cart" class="cart-hidden">
-        <div class="cart-header">
-          <h2>Meu Carrinho</h2>
-          <i class="fa-solid fa-shopping-cart"></i>
-        </div>
-        <div class="cart-content">
-          <div id="cart-items">
-            <p id="empty-cart-message">Você não adicionou nenhum item.</p>
-          </div>
-        </div>
-      </div>
 
     <script src="menu.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+
 </body>
 </html>
