--- a/menu.html
+++ b/menu.html
@@ -52,7 +52,7 @@
         <section>
             <div class="menu-item">
             <img src="costelinhadeporcocomora-pro-nobis.jpeg">
-            <h2>COSTELINHA DE PORCO COM ORA-PRO-NÓBIS</h2>
+            <h2>COSTELINHA COM ORA-PRO-NÓBIS</h2>
             <li>
                 R$ 24,00
             </li>
@@ -211,8 +211,7 @@
     </div>
 
     <script src="menu.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <button class="add-to-carts"><i class="fa-solid fa-cart-shopping"></i></button>
 
 
 </body>
