--- a/menubebida.html
+++ b/menubebida.html
@@ -194,7 +194,6 @@
 
 
         <script src="menu.js"></script>
-        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+        <button class="add-to-carts"><i class="fa-solid fa-cart-shopping"></i></button>
 </body>
 </html>
