--- a/menusobremesa.html
+++ b/menusobremesa.html
@@ -73,7 +73,7 @@
                 <li>
                     R$ 7,00
                 </li>
-                <p class="text-bottom">Mocotó (osso de boi), açúcar, canela, cravo.</p>
+                <p class="text-bottom">Mocotó, açúcar, canela, cravo.</p>
                 <div class="g">150g</div>
                 <button class="add-to-cart"><i class="fa-solid fa-cart-shopping"></i></button>
             </div>
@@ -122,7 +122,7 @@
                 <li>
                     R$ 4,50
                 </li>
-                <p class="text-bottom">Coco, queijo, leite condensado, ovos, manteiga.</p>
+                <p class="text-bottom">Coco, queijo, leite condensado, ovos.</p>
                 <div class="g">90g</div>
                 <button class="add-to-cart"><i class="fa-solid fa-cart-shopping"></i></button>
             </div>
@@ -136,7 +136,7 @@
                 <li>
                     R$ 3,50
                 </li>
-                <p class="text-bottom">Suco de cana-de-açúcar, açúcar mascavo.</p>
+                <p class="text-bottom">Cana-de-açúcar, açúcar mascavo.</p>
                 <div class="g">100g</div>
                 <button class="add-to-cart"><i class="fa-solid fa-cart-shopping"></i></button>
             </div>
@@ -158,7 +158,6 @@
     
         
         <script src="menu.js"></script>
-        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+        <button class="add-to-carts"><i class="fa-solid fa-cart-shopping"></i></button>
     </body>
     </html>
